# rawg-game-release-pipeline

./: .env.example  .gitignore  README.md  default.env  pyproject.toml
.github/workflows/: ci.yml
analysis/sql/: rawg_release_exploration.sql
analytics/dbt/: dbt_project.yml  profiles.yml
analytics/dbt/models/: _sources.yml  sources.yml
analytics/dbt/models/base/: _schema.yml  base_rawg__game_genres.sql  base_rawg__game_platforms.sql  base_rawg__game_stores.sql  base_rawg__games_snapshot.sql  base_rawg__ingestion_runs.sql  schema.yml
analytics/dbt/models/marts/: _schema.yml  marts_games__monthly_trends.sql  marts_games__release_calendar.sql  marts_games__top_titles.sql  schema.yml
docs/: portfolio-notes.md  setup.md
orchestration/airflow/: airflow_macos_standalone_workaround.py  sitecustomize.py
orchestration/airflow/dags/: pipeline.py
scripts/: ingest_rawg.py  run_local_pipeline.py
src/game_release_pipeline/: __init__.py  __main__.py  cli.py  dbt_runner.py  orchestration.py  rawg.py  reporting.py  settings.py  storage.py
tests/: test_cli.py  test_pipeline_smoke.py  test_rawg.py  test_reporting.py  test_settings.py
tests/fixtures/rawg_pages/: recent_page_1.json  recent_page_2.json  upcoming_page_1.json  upcoming_page_2.json
